[project]
name = "PyHaier"
version = "0.3.6"
authors = [
  { name="Jacek Brzozowski", email="jacekbrzozowski.pld@gmail.com" },
]
description = "Very simple library to manipulate the basic parameters of the Haier heat pump."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/ktostam/PyHaier"
"Bug Tracker" = "https://github.com/ktostam/PyHaier/issues"
